feat: screenshot function and send to API function init

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,6 +1,12 @@
+<!DOCTYPE html>
 <html>
-  <body>
-    <h1>Hello Extensions</h1>
-    <script src="popup.js"></script>
-  </body>
+<head>
+    <title>Testing Framework</title>
+</head>
+<body>
+<h1>Take a Screenshot</h1>
+<button id="screenshot-button">Capture Screenshot</button>
+
+<script src="popup.js"></script>
+</body>
 </html>
