--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>SiteProof</title>
     <link rel="stylesheet" type="text/css" href="popup.css">
 </head>
+
 <body>
-<div id="content-container">
-    <h1>SiteProof</h1>
-    <div id="context-container">
-        <label for="screenshot-context">Context:</label>
-        <textarea id="screenshot-context" rows="5" placeholder="What's the purpose of this site?"></textarea>
-    </div>
-    <div id="submit-button-container">
-        <div id="loading-icon" class="loader hide"></div>
-        <button id="screenshot-button">Process Site</button>
-    </div>
-    <div class="relative">
-        <div id="progress-container" class="hide">
-            <h2 id="progress-value"></h2>
-            <aside>of testing completed</aside>
+    <div id="content-container">
+        <h1>SiteProof</h1>
+        <div id="context-container">
+            <label for="screenshot-context">Context:</label>
+            <textarea id="screenshot-context" rows="5" placeholder="What's the purpose of this site?"></textarea>
         </div>
-        <div id="test-cases-list">
+        <div id="submit-button-container">
+            <div id="loading-icon" class="loader hide"></div>
+            <button id="screenshot-button">Process Site</button>
+        </div>
+        <div class="relative">
+            <div id="progress-container" class="hide">
+                <h2 id="progress-value"></h2>
+                <aside>of testing completed</aside>
+            </div>
+            <div id="test-cases-list">
 
+            </div>
+            <button id="download-button" class="hide">Download Report</button>
         </div>
     </div>
-</div>
 
-<script type="module" src="popup.js"></script>
+    <script type="module" src="popup.js"></script>
 </body>
+
 </html>
