--- a/popup/popup.html
+++ b/popup/popup.html
@@ -15,7 +15,7 @@
         </div>
         <div id="submit-button-container">
             <div id="loading-icon" class="loader hide"></div>
-            <button id="screenshot-button">Process Site</button>
+            <button id="screenshot-button" class="extension-button">Process Site</button>
         </div>
         <div class="relative">
             <div id="progress-container" class="hide">
@@ -25,7 +25,7 @@
             <div id="test-cases-list">
 
             </div>
-            <button id="download-button" class="hide">Download Report</button>
+            <button id="download-button" class="hide extension-button">Download Report</button>
         </div>
     </div>
 
