--- a/popup/popup.html
+++ b/popup/popup.html
@@ -13,14 +13,19 @@
         <label for="screenshot-context">Context:</label>
         <textarea id="screenshot-context" rows="5" placeholder="What's the purpose of this site?"></textarea>
     </div>
-    <div id="feedback-section">
-        <div id="green-feedback__container">
-            <img id="thumb-up_icon" src="./src/icons/hand-thumbs-up.svg" />
-            <img id="thumb-up-fill_icon" src="./src/icons/hand-thumbs-up-fill.svg" />
+    <div id="feedback-section" class="hidden">
+        <div>
+            <p>Is this response correct?</p>
         </div>
-        <div id="red-feedback__container">
-            <img id="thumb-down_icon" src="./src/icons/hand-thumbs-down.svg" />
-            <img id="thumb-down-fill_icon" src="./src/icons/hand-thumbs-down-fill.svg" />
+        <div id="feedback-buttons">
+            <div id="green-feedback__container">
+                <img id="thumb-up_icon" src="./src/icons/hand-thumbs-up.svg" />
+                <img id="thumb-up-fill_icon" src="./src/icons/hand-thumbs-up-fill.svg" />
+            </div>
+            <div id="red-feedback__container">
+                <img id="thumb-down_icon" src="./src/icons/hand-thumbs-down.svg" />
+                <img id="thumb-down-fill_icon" src="./src/icons/hand-thumbs-down-fill.svg" />
+            </div>
         </div>
     </div>
     <div id="submit-button-container">
